fix: icon alignment for sd-headline--size-3xl, sd-headline--size-xl, sd-headline--size-lg

--- a/packages/styles/src/modules/headline.css
+++ b/packages/styles/src/modules/headline.css
@@ -96,6 +96,12 @@
       @apply mr-0.5;
     }
   }
+
+  &:is(.sd-headline--size-3xl, .sd-headline--size-xl, .sd-headline--size-lg) {
+    sd-icon {
+      @apply -mt-2;
+    }
+  }
 }
 
 .sd-headline--inverted:not(#_),
